--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.8.3",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-circle": "^1.1.1",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
   },
