--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "react-quiz",
+  "name": "tea-quiz",
+  "homepage": "https://wanderingleafstudios.com/tea-quiz",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
