Update homepage URL

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tea-quiz",
-  "homepage": "https://wanderingleafstudios.com/tea-quiz",
+  "homepage": "https://tea-quiz.wanderingleafstudios.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
